# xgent

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md
crates/xgent_agent/: Cargo.toml
crates/xgent_agent/src/: agent_loop.rs  bridge.rs  bridge_tests.rs  compaction.rs  conversation.rs  events.rs  format.rs  lib.rs  provider_state.rs  session_store.rs  tokenizer.rs
crates/xgent_agent/src/prompts/: project-context.md  system.md
crates/xgent_app/: Cargo.toml
crates/xgent_app/src/: config_bridge.rs  daemon.rs  fs_event_bridge.rs  ipc_client.rs  main.rs  provider_client.rs  startup.rs
crates/xgent_app/tests/: ipc_integration.rs  ipc_proto.rs
crates/xgent_context/: Cargo.toml
crates/xgent_context/src/: hybrid.rs  lib.rs  lsp.rs  on_demand.rs  provider.rs  repo_map.rs  vector.rs
crates/xgent_core/: Cargo.toml
crates/xgent_core/src/: chat.rs  config.rs  editor.rs  error.rs  fs.rs  ids.rs  lib.rs  methods.rs  notifications.rs  proto.rs  session.rs
crates/xgent_daemon/: Cargo.toml
crates/xgent_daemon/src/: config_store.rs  fs_watcher.rs  lifecycle.rs  main.rs  provider_pool.rs  registry.rs  server.rs  session.rs
crates/xgent_mcp/: Cargo.toml
crates/xgent_provider/: Cargo.toml
crates/xgent_provider/src/: anthropic.rs  chat_types.rs  custom.rs  lib.rs  openai_compat.rs  provider.rs  response_api.rs  sse.rs
crates/xgent_settings/: Cargo.toml
crates/xgent_settings/locales/en-US/: main.ftl
crates/xgent_settings/locales/zh-CN/: main.ftl
crates/xgent_settings/src/: lib.rs  localizer.rs  resources.rs
crates/xgent_settings_core/: Cargo.toml
crates/xgent_settings_core/src/: global.rs  lib.rs  paths.rs  project.rs  store.rs
crates/xgent_terminal/: Cargo.toml
crates/xgent_terminal/src/: backend.rs  lib.rs  local_pty.rs  render.rs
crates/xgent_terminal/tests/: integration.rs
crates/xgent_tools/: Cargo.toml
crates/xgent_tools/src/: confirm.rs  editor_tool.rs  executor.rs  lib.rs  mcp.rs  path.rs  security.rs  tool.rs
crates/xgent_tools/src/builtins/: mod.rs  read_file.rs  run_command.rs  search_files.rs  write_file.rs
crates/xgent_ui/: Cargo.toml
crates/xgent_ui/src/: chat_panel.rs  command_palette.rs  confirm_dialog.rs  file_panel.rs  i18n.rs  layout.rs  lib.rs  resize.rs  settings_panel.rs  shortcuts.rs  status_bar.rs  theme.rs  tool_panel.rs  top_bar.rs
crates/xgent_ui/src/editor/: at_syntax.rs  buffer.rs  command.rs  conflict.rs  io.rs  mod.rs  state.rs  tabs.rs
crates/xgent_ui/src/terminal/: input.rs  io.rs  mod.rs  output.rs  tabs.rs
crates/xgent_ui/tests/: layout.rs
crates/xui/: Cargo.toml
crates/xui/src/: command_palette.rs  hotkeys.rs  i18n_bridge.rs  input.rs  lib.rs  mouse_wheel_scroll.rs  scroll_area.rs  scrollbar.rs  shortcuts.rs  text_editor.rs  virtual_list.rs
crates/xui/src/text_editor/: buffer.rs  find.rs  highlight.rs  render.rs  undo.rs  virtual_render.rs
crates/xui_i18n/: Cargo.toml
crates/xui_i18n/src/: lib.rs
doc/: README.md  conversation-flow-fixes-2026-07-20.md  dev-tutorial.md
doc/decisions/: 0001-provider-就绪闸门权威源定-daemon-侧.md  0002-model-落点为-provider-级-model-overrides.md  0003-错误反馈细分多类-ErrorKind.md  0004-kind-下拉选择-MVP-隐藏-Custom.md  0005-chatmessage-结构化-agentmessage-双层类型.md  0006-chatevent-细粒度流式事件-clean-cutover.md  0007-tool-trait-tier-approval-signal-破坏性重构.md  0008-会话存储-jsonl-决策.md  0009-编辑器保存绕过-writefile-工具链-ui-only-tier.md  0010-oq08-检索升级路径分段-编辑器到c-d延后.md  0011-用户终端-PTY-选-portable-pty-决策.md  0012-终端独立-crate-PTY-抽象-trait-决策.md  0013-插件工具同步trait方法不经WIT清单兜底.md  README.md
doc/design/: README.md  architecture.md  editor-design.md  plugin-system-design.md  requirements.md  terminal-design.md  ui-design.md  ui-gap-plan.md  ui-prototype.html
doc/notes/: README.md  bevy-ui-mode-assessment.md  context-retrieval-research.md  daemon-scope-research.md  i18n-research.md  oh-my-pi-borrowing-analysis.md  oh-my-pi-study.md  scroll-abstraction-design.md
doc/plans/: README.md  optimization-execution-tasks.md  optimization-from-omp.md  step1-xgent-core.md  step10-xui.md  step11-xgent-ui.md  step12-xgent-app.md  step2-xui-i18n.md  step3-xgent-settings-core.md  step4-xgent-settings.md  step5-xgent-provider.md  step6-xgent-daemon.md  step7-xgent-tools.md  step8-xgent-context.md  step9-xgent-agent.md
doc/tasks/: README.md  task1-xgent-core.md  task10-xui.md  task11-xgent-ui.md  task12-xgent-app.md  task2-xui-i18n.md  task3-xgent-settings-core.md  task4-xgent-settings.md  task5-xgent-provider.md  task6-xgent-daemon.md  task7-xgent-tools.md  task8-xgent-context.md  task9-xgent-agent.md
plans/: README.md  quantum-nebula-tesla.md  step2-xgent-settings.md  step3-xgent-provider.md  step4-xgent-tools.md
