[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
# Bevy 0.20.0-dev — path 依赖指向本地源码
bevy = { path = "../bevy" }
# 异步运行时
tokio = { version = "1.52.3", features = ["full"] }
# HTTP 客户端
reqwest = { version = "0.13.3", features = ["json", "stream"] }
# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# 异步 trait
async-trait = "0.1.89"
# SSE 流式解析
eventsource-stream = "0.2.3"
# 错误处理
thiserror = "2.0.18"
# futures core（流式处理）
futures = "0.3.32"
# TOML 序列化（配置存储）
toml = "0.8"
# 平台规范路径
dirs = "5"
# fluent i18n
fluent = "0.2"
fluent-resmgr = "0.1"
fluent-langneg = "0.1"
unic-langid = "0.1"
