[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
# Bevy 0.19.0 — path 依赖指向本地源码，便于调试与排查 breaking change
bevy = { path = "../bevy", features = ["keyboard", "system_font_discovery"] }
# 文本布局（启用复杂脚本支持，修复 CJK 分词模型缺失导致的 ICU4X 日志刷屏）
parley = { version = "0.11", default-features = false, features = ["std", "complex-scripts"] }
# 异步运行时
tokio = { version = "1.52.3", features = ["full"] }
# HTTP 客户端
reqwest = { version = "0.13.3", features = ["json", "stream"] }
# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# 异步 trait
async-trait = "0.1.89"
# SSE 流式解析
eventsource-stream = "0.2.3"
# 错误处理
thiserror = "2.0.18"
# futures core（流式处理）
futures = "0.3.32"
futures-core = "0.3.32"
# 字节流
bytes = "1"
# tokio stream 扩展
tokio-stream = "0.1"
# 文件监听
notify = "8"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 跨平台 Unix domain socket 抽象（Windows named pipe 兼容）
tokio-util = { version = "0.7", features = ["io"] }
# TOML 序列化（配置存储）
toml = "0.8"
# 平台规范路径
dirs = "5"
# fluent i18n
fluent = "0.17"
fluent-langneg = "0.1"
unic-langid = "0.9"
