[package]
name = "xgent_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
xgent_core = { path = "../xgent_core" }
xgent_provider = { path = "../xgent_provider" }
xgent_tools = { path = "../xgent_tools" }
xgent_context = { path = "../xgent_context" }
xgent_settings = { path = "../xgent_settings" }
xgent_settings_core = { path = "../xgent_settings_core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
