[package]
name = "xgent_app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
xgent_core = { path = "../xgent_core" }
xgent_settings = { path = "../xgent_settings" }
xgent_settings_core = { path = "../xgent_settings_core" }
xgent_agent = { path = "../xgent_agent" }
xgent_tools = { path = "../xgent_tools" }
xgent_context = { path = "../xgent_context" }
xgent_terminal = { path = "../xgent_terminal" }
xgent_ui = { path = "../xgent_ui" }
xui = { path = "../xui" }
xui_i18n = { path = "../xui_i18n" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# icu_provider — 仅用于启用 logging 特性，使其日志经 log crate 路由（而非 eprintln!）
icu_provider = { version = "2.2", default-features = false, features = ["logging"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
