[package]
name = "xgent_provider"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
eventsource-stream = { workspace = true }
thiserror = { workspace = true }
