[package]
name = "xgent_settings_core"
version = "0.1.0"
edition = "2024"

[dependencies]
xgent_core = { path = "../xgent_core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
