[package]
name = "xgent_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["ui", "bevy_ui_widgets", "default_font"] }
xgent_core = { path = "../xgent_core" }
xgent_settings = { path = "../xgent_settings" }
xgent_settings_core = { path = "../xgent_settings_core" }
xgent_agent = { path = "../xgent_agent" }
xgent_tools = { path = "../xgent_tools" }
xui = { path = "../xui" }
parley = { workspace = true }
xui_i18n = { path = "../xui_i18n" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
bevy = { workspace = true, features = ["ui", "bevy_ui_widgets", "default_font", "bevy_dev_tools"] }
